commit translated contents

--- a/docs/docs-ref-autogen/outlook/outlook/office.notificationmessages.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.notificationmessages.yml
@@ -30,6 +30,8 @@ items:
 
       每封邮件中最多有 5 个通知。设置过多的通知将返回 `NumberOfNotificationMessagesExceeded` 错误。
 
+      **重要说明**： `InsightMessage` 每个加载项只允许一个类型的通知。 （该 `InsightMessage` 类型当前处于预览阶段。）尝试添加更多将引发错误。
+
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
       **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
@@ -68,6 +70,8 @@ items:
       向项目添加通知。
 
       每封邮件中最多有 5 个通知。设置过多的通知将返回 `NumberOfNotificationMessagesExceeded` 错误。
+
+      **重要说明**： `InsightMessage` 每个加载项只允许一个类型的通知。 （该 `InsightMessage` 类型当前处于预览阶段。）尝试添加更多将引发错误。
 
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
