--- a/docs/docs-ref-autogen/outlook/outlook/office.notificationmessagedetails.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.notificationmessagedetails.yml
@@ -24,7 +24,7 @@ items:
       - 'outlook!Office.NotificationMessageDetails#type:member'
   - uid: 'outlook!Office.NotificationMessageDetails#actions:member'
     summary: |-
-      指定邮件的操作。 限制：2个操作。 此限制不会计算默认情况下包含的 "消除" 操作的数目。 仅当类型为时才适用`InsightMessage`<!-- -->. 为不受支持的类型指定此属性或包含过多的操作将引发错误。
+      指定邮件的操作。 限制：1个操作。 此限制不会计算默认情况下包含的 "消除" 操作。 仅当类型为时才适用`InsightMessage`<!-- -->. 为不受支持的类型指定此属性或包含过多的操作将引发错误。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写'
