--- a/docs/docs-ref-autogen/powerpoint/powerpoint.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint.yml
@@ -10,9 +10,9 @@ items:
       - 'powerpoint!PowerPoint.createPresentation:function(1)'
   - uid: 'powerpoint!PowerPoint.createPresentation:function(1)'
     summary: |-
-      <span data-ttu-id="291ac-101">创建并打开一个新的演示文稿。</span><span class="sxs-lookup"><span data-stu-id="291ac-101">Creates and opens a new presentation.</span></span> <span data-ttu-id="291ac-102">（可选）可以使用 base64 编码的 .pptx 文件预填充演示文稿。</span><span class="sxs-lookup"><span data-stu-id="291ac-102">Optionally, the presentation can be pre-populated with a base64-encoded .pptx file.</span></span>
+      创建并打开一个新的演示文稿。 （可选）可以使用 base64 编码的 .pptx 文件预填充演示文稿。
 
-      <span data-ttu-id="291ac-103">\[[API 集： PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="291ac-103">\[ [API set: PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+      \[[API 集： PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: PowerPoint.createPresentation(base64File)
     fullName: PowerPoint.createPresentation(base64File)
     langs:
@@ -26,7 +26,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="291ac-104">示例</span><span class="sxs-lookup"><span data-stu-id="291ac-104">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var myFile = document.getElementById("file");
@@ -45,7 +45,7 @@ items:
           ```
       parameters:
         - id: base64File
-          description: <span data-ttu-id="291ac-105">可选。</span><span class="sxs-lookup"><span data-stu-id="291ac-105">Optional.</span></span> <span data-ttu-id="291ac-106">Base64 编码的 .pptx 文件。</span><span class="sxs-lookup"><span data-stu-id="291ac-106">The base64-encoded .pptx file.</span></span> <span data-ttu-id="291ac-107">默认值为 null。</span><span class="sxs-lookup"><span data-stu-id="291ac-107">The default value is null.</span></span>
+          description: 可选。 Base64 编码的 .pptx 文件。 默认值为 null。
           type:
             - string
 references:
