--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.commentcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.commentcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.CommentCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="5a284-101">一个用于更新 CommentCollection 对象上的数据的接口，可用于 "commentCollection （</span><span class="sxs-lookup"><span data-stu-id="5a284-101">An interface for updating data on the CommentCollection object, for use in "commentCollection.set(</span></span><!-- --><span data-ttu-id="5a284-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="5a284-102"></span></span><!-- --><span data-ttu-id="5a284-103">)".</span><span class="sxs-lookup"><span data-stu-id="5a284-103"></span></span>'
+    summary: '一个用于更新 CommentCollection 对象上的数据的接口，可用于 "commentCollection （<!-- -->{ ... }<!-- -->)".'
     name: Visio.Interfaces.CommentCollectionUpdateData
     fullName: Visio.Interfaces.CommentCollectionUpdateData
     langs:
