--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.commentdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.CommentData:interface'
-    summary: <span data-ttu-id="ee7d2-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ee7d2-101">An interface describing the data returned by calling "comment.toJSON()".</span></span>
+    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
     name: Visio.Interfaces.CommentData
     fullName: Visio.Interfaces.CommentData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'visio!Visio.Interfaces.CommentData#text:member'
   - uid: 'visio!Visio.Interfaces.CommentData#author:member'
     summary: |-
-      <span data-ttu-id="ee7d2-102">指定注释的作者姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="ee7d2-102">A string that specifies the name of the author of the comment.</span></span>
+      指定注释的作者姓名的字符串。
 
-      <span data-ttu-id="ee7d2-103">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="ee7d2-103">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: author
     fullName: author
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'visio!Visio.Interfaces.CommentData#date:member'
     summary: |-
-      <span data-ttu-id="ee7d2-104">指定注释创建日期的字符串。</span><span class="sxs-lookup"><span data-stu-id="ee7d2-104">A string that specifies the date when the comment was created.</span></span>
+      指定注释创建日期的字符串。
 
-      <span data-ttu-id="ee7d2-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="ee7d2-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: date
     fullName: date
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'visio!Visio.Interfaces.CommentData#text:member'
     summary: |-
-      <span data-ttu-id="ee7d2-106">包含注释文本的字符串。</span><span class="sxs-lookup"><span data-stu-id="ee7d2-106">A string that contains the comment text.</span></span>
+      包含注释文本的字符串。
 
-      <span data-ttu-id="ee7d2-107">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="ee7d2-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: text
     fullName: text
     langs:
