--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.hyperlinkloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.hyperlinkloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.Interfaces.HyperlinkLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="c539c-101">表示 Hyperlink 对象。</span><span class="sxs-lookup"><span data-stu-id="c539c-101">Represents the Hyperlink.</span></span>
+      表示 Hyperlink 对象。
 
-      <span data-ttu-id="c539c-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c539c-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Interfaces.HyperlinkLoadOptions
     fullName: Visio.Interfaces.HyperlinkLoadOptions
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.HyperlinkLoadOptions#address:member'
     summary: |-
-      <span data-ttu-id="c539c-103">获取超链接对象的地址。</span><span class="sxs-lookup"><span data-stu-id="c539c-103">Gets the address of the Hyperlink object.</span></span> <span data-ttu-id="c539c-104">只读。</span><span class="sxs-lookup"><span data-stu-id="c539c-104">Read-only.</span></span>
+      获取超链接对象的地址。 只读。
 
-      <span data-ttu-id="c539c-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c539c-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: address
     fullName: address
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.HyperlinkLoadOptions#description:member'
     summary: |-
-      <span data-ttu-id="c539c-106">获取超链接的说明。</span><span class="sxs-lookup"><span data-stu-id="c539c-106">Gets the description of a hyperlink.</span></span> <span data-ttu-id="c539c-107">只读。</span><span class="sxs-lookup"><span data-stu-id="c539c-107">Read-only.</span></span>
+      获取超链接的说明。 只读。
 
-      <span data-ttu-id="c539c-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c539c-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: description
     fullName: description
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.HyperlinkLoadOptions#extraInfo:member'
     summary: |-
-      <span data-ttu-id="c539c-109">获取用于解析超链接的 URL 的额外 URL 请求信息。</span><span class="sxs-lookup"><span data-stu-id="c539c-109">Gets the extra URL request information used to resolve the hyperlink's URL.</span></span> <span data-ttu-id="c539c-110">只读。</span><span class="sxs-lookup"><span data-stu-id="c539c-110">Read-only.</span></span>
+      获取用于解析超链接的 URL 的额外 URL 请求信息。 只读。
 
-      <span data-ttu-id="c539c-111">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c539c-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: extraInfo
     fullName: extraInfo
     langs:
@@ -75,9 +75,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.HyperlinkLoadOptions#subAddress:member'
     summary: |-
-      <span data-ttu-id="c539c-112">获取超链接对象的子地址。</span><span class="sxs-lookup"><span data-stu-id="c539c-112">Gets the sub-address of the Hyperlink object.</span></span> <span data-ttu-id="c539c-113">只读。</span><span class="sxs-lookup"><span data-stu-id="c539c-113">Read-only.</span></span>
+      获取超链接对象的子地址。 只读。
 
-      <span data-ttu-id="c539c-114">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="c539c-114">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: subAddress
     fullName: subAddress
     langs:
