--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.selectiondata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.selectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.SelectionData:interface'
-    summary: <span data-ttu-id="9d891-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9d891-101">An interface describing the data returned by calling "selection.toJSON()".</span></span>
+    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
     name: Visio.Interfaces.SelectionData
     fullName: Visio.Interfaces.SelectionData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'visio!Visio.Interfaces.SelectionData#shapes:member'
   - uid: 'visio!Visio.Interfaces.SelectionData#shapes:member'
     summary: |-
-      <span data-ttu-id="9d891-102">获取所选内容的形状。</span><span class="sxs-lookup"><span data-stu-id="9d891-102">Gets the Shapes of the Selection.</span></span> <span data-ttu-id="9d891-103">只读。</span><span class="sxs-lookup"><span data-stu-id="9d891-103">Read-only.</span></span>
+      获取所选内容的形状。 只读。
 
-      <span data-ttu-id="9d891-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="9d891-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: shapes
     fullName: shapes
     langs:
