--- a/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.messagecompose.yml
@@ -65,6 +65,7 @@ items:
       - 'outlook!Office.MessageCompose#saveAsync:member(1)'
       - 'outlook!Office.MessageCompose#saveAsync:member(2)'
       - 'outlook!Office.MessageCompose#seriesId:member'
+      - 'outlook!Office.MessageCompose#sessionData:member'
       - 'outlook!Office.MessageCompose#setSelectedDataAsync:member(1)'
       - 'outlook!Office.MessageCompose#setSelectedDataAsync:member(2)'
       - 'outlook!Office.MessageCompose#subject:member'
@@ -77,7 +78,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作 (是否使用此 API 或 Outlook UI) 。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -177,7 +178,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作（无论是使用此 API 还是 Outlook UI）。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
+      **重要说明**：在 Windows 上的 Outlook 的最新内部版本中，引入了一个错误，该错误会错误地 `Authorization: Bearer` 将标头追加到此操作 (是否使用此 API 或 Outlook UI) 。 若要解决此问题，您可以尝试使用 `addFileAttachmentFromBase64` 由要求集1.8 引入的 API。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -224,7 +225,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **注意**：如果使用的是数据 URL API （例如，`readAsDataURL`<!-- -->），您需要先去掉数据 URL 前缀，然后再将字符串的其余部分发送到此 API。 例如，如果完整的字符串由`data:image/svg+xml;base64,<rest of base64 string>`<!-- -->，请删除`data:image/svg+xml;base64,`<!-- -->.
+      **注意**：如果使用的是数据 URL API (例如，`readAsDataURL`<!-- -->) ，您需要先去除数据 URL 前缀，然后再将字符串的其余部分发送到此 API。 例如，如果完整的字符串由`data:image/svg+xml;base64,<rest of base64 string>`<!-- -->，请删除`data:image/svg+xml;base64,`<!-- -->.
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -313,7 +314,7 @@ items:
 
       随后可以将该标识符与 `removeAttachmentAsync` 方法一同使用，以删除同一个会话中的附件。
 
-      **注意**：如果使用的是数据 URL API （例如，`readAsDataURL`<!-- -->），您需要先去掉数据 URL 前缀，然后再将字符串的其余部分发送到此 API。 例如，如果完整的字符串由`data:image/svg+xml;base64,<rest of base64 string>`<!-- -->，请删除`data:image/svg+xml;base64,`<!-- -->.
+      **注意**：如果使用的是数据 URL API (例如，`readAsDataURL`<!-- -->) ，您需要先去除数据 URL 前缀，然后再将字符串的其余部分发送到此 API。 例如，如果完整的字符串由`data:image/svg+xml;base64,<rest of base64 string>`<!-- -->，请删除`data:image/svg+xml;base64,`<!-- -->.
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -883,7 +884,7 @@ items:
     summary: |-
       禁用 Outlook 客户端签名。
 
-      对于 Windows 和 Mac 富客户端，此 API 会将发送帐户的 "新建邮件" 和 "答复/转发" 部分的签名设置为 "（无）"，从而有效地禁用该签名。 对于 web 上的 Outlook，API 应禁用新邮件、答复和转发的签名选项。 如果选择了签名，此 API 调用应禁用它。
+      对于 Windows 和 Mac 富客户端，此 API 会将发送帐户的 "新邮件" 和 "答复/转发" 部分中的签名设置为 " (无) "，从而有效地禁用该签名。 对于 web 上的 Outlook，API 应禁用新邮件、答复和转发的签名选项。 如果选择了签名，此 API 调用应禁用它。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -915,7 +916,7 @@ items:
     summary: |-
       禁用 Outlook 客户端签名。
 
-      对于 Windows 和 Mac 富客户端，此 API 会将发送帐户的 "新建邮件" 和 "答复/转发" 部分的签名设置为 "（无）"，从而有效地禁用该签名。 对于 web 上的 Outlook，API 应禁用新邮件、答复和转发的签名选项。 如果选择了签名，此 API 调用应禁用它。
+      对于 Windows 和 Mac 富客户端，此 API 会将发送帐户的 "新邮件" 和 "答复/转发" 部分中的签名设置为 " (无) "，从而有效地禁用该签名。 对于 web 上的 Outlook，API 应禁用新邮件、答复和转发的签名选项。 如果选择了签名，此 API 调用应禁用它。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1004,7 +1005,7 @@ items:
 
       **错误**：
 
-      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目（如联系人或任务项）以外的项附件类型。
+      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目之外的项目附件类型 (如联系人或任务项) 。
 
       - `InvalidAttachmentId`<!-- -->：附件标识符不存在。
 
@@ -1086,7 +1087,7 @@ items:
 
       **错误**：
 
-      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目（如联系人或任务项）以外的项附件类型。
+      - `AttachmentTypeNotSupported`<!-- -->：不支持该附件类型。 不受支持的类型包括 Rtf 格式的嵌入图像或电子邮件或日历项目之外的项目附件类型 (如联系人或任务项) 。
 
       - `InvalidAttachmentId`<!-- -->：附件标识符不存在。
     name: 'getAttachmentContentAsync(attachmentId, callback)'
@@ -1263,7 +1264,7 @@ items:
     summary: |-
       获取通过可操作邮件激活加载项时传递的初始化数据。
 
-      **注意**：仅 outlook 2016 或更高版本（大于16.0.8413.1000 的即点即用版本）和适用于 Office 365 的 outlook 网页版支持此方法。
+      **注意**：只有 outlook 2016 或更高版本的 Windows (即点即用版本大于 16.0.8413.1000) 和 outlook 网页版（适用于 Office 365）时才支持此方法。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1297,7 +1298,7 @@ items:
     summary: |-
       获取通过可操作邮件激活加载项时传递的初始化数据。
 
-      **注意**：仅 outlook 2016 或更高版本（大于16.0.8413.1000 的即点即用版本）和适用于 Office 365 的 outlook 网页版支持此方法。
+      **注意**：只有 outlook 2016 或更高版本的 Windows (即点即用版本大于 16.0.8413.1000) 和 outlook 网页版（适用于 Office 365）时才支持此方法。
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1355,7 +1356,7 @@ items:
 
       调用此方法时，此方法通过回调方法返回项 ID。
 
-      **注意**：如果你的外接程序对 `getItemIdAsync` 撰写模式中的项（例如，获取与 `itemId` EWS 或 REST API 一起使用）调用，请注意，当 Outlook 处于缓存模式下时，可能需要一段时间才能将项目同步到服务器。 在同步项目之前， `itemId` 无法识别该项目并使用它将返回错误。
+      **注意**：如果外接程序对 `getItemIdAsync` 撰写模式中的项目调用 (例如，若要获取 `itemId` 与 EWS 或 REST API) 的配合使用，请注意，当 Outlook 处于缓存模式下时，可能需要一段时间才能将项目同步到服务器。 在同步项目之前， `itemId` 无法识别该项目并使用它将返回错误。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1392,7 +1393,7 @@ items:
 
       调用此方法时，此方法通过回调方法返回项 ID。
 
-      **注意**：如果你的外接程序对 `getItemIdAsync` 撰写模式中的项（例如，获取与 `itemId` EWS 或 REST API 一起使用）调用，请注意，当 Outlook 处于缓存模式下时，可能需要一段时间才能将项目同步到服务器。 在同步项目之前， `itemId` 无法识别该项目并使用它将返回错误。
+      **注意**：如果外接程序对 `getItemIdAsync` 撰写模式中的项目调用 (例如，若要获取 `itemId` 与 EWS 或 REST API) 的配合使用，请注意，当 Outlook 处于缓存模式下时，可能需要一段时间才能将项目同步到服务器。 在同步项目之前， `itemId` 无法识别该项目并使用它将返回错误。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1686,7 +1687,7 @@ items:
     summary: |-
       获取客户端签名是否已启用。
 
-      对于 Windows 和 Mac 富客户端， `true` 如果新邮件、答复或转发的默认签名设置为发送 Outlook 帐户的模板，则 API 调用应返回。 对于 web 上的 Outlook， `true` 如果为撰写类型启用了签名，API 调用应返回`newMail`<!-- -->, `reply`<!-- -->，或者`forward`<!-- -->. 如果 Mac 或 Windows 富客户端中的设置设置为 "（无）" 或在 Web 上的 Outlook 中禁用，API 调用应返回`false`<!-- -->.
+      对于 Windows 和 Mac 富客户端， `true` 如果新邮件、答复或转发的默认签名设置为发送 Outlook 帐户的模板，则 API 调用应返回。 对于 web 上的 Outlook， `true` 如果为撰写类型启用了签名，API 调用应返回`newMail`<!-- -->, `reply`<!-- -->，或者`forward`<!-- -->. 如果设置设置为 Mac 或 Windows 富客户端中的 " (无) " 或 "在 Web 上的 Outlook 中禁用"，API 调用应返回`false`<!-- -->.
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -1718,7 +1719,7 @@ items:
     summary: |-
       获取客户端签名是否已启用。
 
-      对于 Windows 和 Mac 富客户端， `true` 如果新邮件、答复或转发的默认签名设置为发送 Outlook 帐户的模板，则 API 调用应返回。 对于 web 上的 Outlook， `true` 如果为撰写类型启用了签名，API 调用应返回`newMail`<!-- -->, `reply`<!-- -->，或者`forward`<!-- -->. 如果 Mac 或 Windows 富客户端中的设置设置为 "（无）" 或在 Web 上的 Outlook 中禁用，API 调用应返回`false`<!-- -->.
+      对于 Windows 和 Mac 富客户端， `true` 如果新邮件、答复或转发的默认签名设置为发送 Outlook 帐户的模板，则 API 调用应返回。 对于 web 上的 Outlook， `true` 如果为撰写类型启用了签名，API 调用应返回`newMail`<!-- -->, `reply`<!-- -->，或者`forward`<!-- -->. 如果设置设置为 Mac 或 Windows 富客户端中的 " (无) " 或 "在 Web 上的 Outlook 中禁用"，API 调用应返回`false`<!-- -->.
 
       \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -2207,7 +2208,7 @@ items:
     summary: |-
       获取实例所属的系列的 ID。
 
-      在 web 上的 Outlook 和桌面客户端中， `seriesId` 返回此项所属的父（系列）项的 Exchange Web 服务（EWS） ID。 但是，在 iOS 和 Android 上，Webcasts&seriesid 返回父项的 REST ID。
+      在 web 上的 Outlook 和桌面客户端中，将 `seriesId` 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是，在 iOS 和 Android 上，Webcasts&seriesid 返回父项的 REST ID。
 
       **注意**：属性返回的标识符与 `seriesId` Exchange Web 服务项目标识符相同。 `seriesId`属性与 OUTLOOK REST API 使用的 Outlook id 不相同。 使用此值进行 REST API 调用之前，应使用此值进行转换`Office.context.mailbox.convertToRestId`<!-- -->. 有关更多详细信息，请参阅[使用 outlook 外接程序中的 OUTLOOK REST api](https://docs.microsoft.com/office/dev/add-ins/outlook/use-rest-api)<!-- -->.
 
@@ -2243,6 +2244,39 @@ items:
       return:
         type:
           - string
+  - uid: 'outlook!Office.MessageCompose#sessionData:member'
+    summary: |-
+      在撰写模式下管理项目的[SessionData](xref:outlook!Office.SessionData:interface) 。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：邮件撰写
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/outlook/99-preview-apis/session-data-apis.yaml
+      Office.context.mailbox.item.sessionData.getAllAsync(function(asyncResult) {
+        if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+          console.log("The sessionData is " + JSON.stringify(asyncResult.value));
+        } else {
+          console.log("Failed to get all sessionData. Error: " + JSON.stringify(asyncResult.error));
+        }
+      });
+      ```
+    isPreview: true
+    name: sessionData
+    fullName: sessionData
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'sessionData: SessionData;'
+      return:
+        type:
+          - 'outlook!Office.SessionData:interface'
   - uid: 'outlook!Office.MessageCompose#setSelectedDataAsync:member(1)'
     summary: |-
       以异步方式将数据插入到邮件的正文或主题中。
@@ -2281,7 +2315,7 @@ items:
           type:
             - string
         - id: options
-          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。 `coercionType`<!-- -->：如果是文本，则当前样式应用于 web 上的 Outlook 和桌面客户端。 如果字段是 HTML 编辑器，只会插入文本数据，即使数据为 HTML，也不例外。 如果 html 和字段支持 HTML （主题不），则当前样式应用于 web 上的 Outlook，并且默认样式应用于桌面客户端上的 Outlook 中。 如果该字段是文本字段，则返回 `InvalidDataFormat` 错误。 如果未设置 `coercionType`，则结果取决于该字段：如果该字段是 HTML，则使用 HTML；如果该字段是文本，则使用纯文本。
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。 `coercionType`<!-- -->：如果是文本，则当前样式应用于 web 上的 Outlook 和桌面客户端。 如果字段是 HTML 编辑器，只会插入文本数据，即使数据为 HTML，也不例外。 如果 html 和字段支持 HTML (主题不) ，则在 web 上的 Outlook 中应用当前样式，并在桌面客户端上的 Outlook 中应用默认样式。 如果该字段是文本字段，则返回 `InvalidDataFormat` 错误。 如果未设置 `coercionType`，则结果取决于该字段：如果该字段是 HTML，则使用 HTML；如果该字段是文本，则使用纯文本。
           type:
             - 'outlook!Office.MessageCompose#setSelectedDataAsync~0:complex'
         - id: callback
@@ -2945,6 +2979,8 @@ references:
         fullName: Office.AsyncResult
       - name: <string>) => void
         fullName: <string>) => void
+  - uid: 'outlook!Office.SessionData:interface'
+    name: SessionData
   - uid: 'outlook!Office.MessageCompose#setSelectedDataAsync~0:complex'
     name: Office.AsyncContextOptions & CoercionTypeOptions
     fullName: Office.AsyncContextOptions & Office.CoercionTypeOptions
