--- a/docs/docs-ref-autogen/outlook/outlook/office.body.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.body.yml
@@ -34,7 +34,9 @@ items:
     summary: |-
       追加在将指定内容发送到项目正文的末尾（在任何签名之后）。
 
-      如果用户运行的外接程序[使用 \` \` 清单中的 ItemSend 实现了发送功能](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-on-send-addins?tabs=windows)，则<!-- -->，附加在发送前运行，在发送前功能之前。
+      如果用户运行的外接程序[使用 \` \` 清单中的 ItemSend 实现了发送功能](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-on-send-addins?tabs=windows)，则<!-- -->、"追加-发送" 在发送前功能之前运行。
+
+      **重要说明**：如果外接程序在处理程序中实现了发送前功能和调用 `appendOnSendAsync` `ItemSend` ，则会返回错误，因为这种情况不受支持。
 
       **重要说明**：若要使用`appendOnSendAsync`<!-- -->， `AppendOnSend` 必须将扩展权限包括在清单的 `ExtendedPermissions` 节点中。
 
@@ -94,7 +96,9 @@ items:
     summary: |-
       追加在将指定内容发送到项目正文的末尾（在任何签名之后）。
 
-      如果用户运行的外接程序[使用 \` \` 清单中的 ItemSend 实现了发送功能](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-on-send-addins?tabs=windows)，则<!-- -->，附加在发送前运行，在发送前功能之前。
+      如果用户运行的外接程序[使用 \` \` 清单中的 ItemSend 实现了发送功能](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-on-send-addins?tabs=windows)，则<!-- -->、"追加-发送" 在发送前功能之前运行。
+
+      **重要说明**：如果外接程序在处理程序中实现了发送前功能和调用 `appendOnSendAsync` `ItemSend` ，则会返回错误，因为这种情况不受支持。
 
       **重要说明**：若要使用`appendOnSendAsync`<!-- -->， `AppendOnSend` 必须将扩展权限包括在清单的 `ExtendedPermissions` 节点中。
 
@@ -293,7 +297,7 @@ items:
 
       `prependAsync` 方法将指定的字符串插入项目正文的开头。 插入后，光标将返回相对于插入内容的原始位置。
 
-      在 HTML 标记中添加链接时，可以通过 `id` 在锚点上设置属性禁用在线链接预览（<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->）到 "LPNoLP" （有关示例，请参阅 "**示例**" 部分）。
+      在 HTML 标记中添加链接时，您可以通过 `id` 在锚点上设置属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅**示例部分的示例) ** 。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -345,7 +349,7 @@ items:
 
       `prependAsync` 方法将指定的字符串插入项目正文的开头。 插入后，光标将返回相对于插入内容的原始位置。
 
-      在 HTML 标记中添加链接时，可以通过 `id` 在锚点上设置属性禁用在线链接预览（<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->）到 "LPNoLP" （有关示例，请参阅 "**示例**" 部分）。
+      在 HTML 标记中添加链接时，您可以通过 `id` 在锚点上设置属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅**示例部分的示例) ** 。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -382,7 +386,7 @@ items:
 
       使用 HTML 格式的正文时，请务必注意 `Body.getAsync` 和 `Body.setAsync` 方法不是幂等。 从方法返回的值 `getAsync` 并不一定与之前在方法中传递的值完全相同 `setAsync` 。 客户端可以修改传递给的值，以便 `setAsync` 它能够有效地呈现其呈现引擎。
 
-      在 HTML 标记中添加链接时，可以通过 `id` 在锚点上设置属性禁用在线链接预览（<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->）到 "LPNoLP" （有关示例，请参阅 "**示例**" 部分）。
+      在 HTML 标记中添加链接时，您可以通过 `id` 在锚点上设置属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅**示例部分的示例) ** 。
 
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -449,7 +453,7 @@ items:
 
       使用 HTML 格式的正文时，请务必注意 `Body.getAsync` 和 `Body.setAsync` 方法不是幂等。 从方法返回的值 `getAsync` 并不一定与之前在方法中传递的值完全相同 `setAsync` 。 客户端可以修改传递给的值，以便 `setAsync` 它能够有效地呈现其呈现引擎。
 
-      在 HTML 标记中添加链接时，可以通过在锚点上设置 id 属性禁用联机链接预览（<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->）到 "LPNoLP" （有关示例，请参阅 "**示例**" 部分）。
+      在 HTML 标记中添加链接时，可以通过设置定位点上的 id 属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅**示例部分的示例) ** 。
 
       \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -488,7 +492,7 @@ items:
 
       `setSelectedDataAsync` 方法将指定的字符串插入项目正文中的光标位置，或者，如果在编辑器中选定了文本，它就会替换所选文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后，光标放置在插入内容的末尾。
 
-      在 HTML 标记中添加链接时，可以通过在锚点上设置 id 属性禁用联机链接预览（<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->）到 "LPNoLP" （有关示例，请参阅 "**示例**" 部分）。
+      在 HTML 标记中添加链接时，可以通过设置定位点上的 id 属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅**示例部分的示例) ** 。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -542,7 +546,7 @@ items:
 
       `setSelectedDataAsync` 方法将指定的字符串插入项目正文中的光标位置，或者，如果在编辑器中选定了文本，它就会替换所选文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后，光标放置在插入内容的末尾。
 
-      在 HTML 标记中添加链接时，可以通过 `id` 在锚点上设置属性禁用在线链接预览（<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->）到 "LPNoLP" （有关示例，请参阅 "**示例**" 部分）。
+      在 HTML 标记中添加链接时，您可以通过 `id` 在锚点上设置属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅**示例部分的示例) ** 。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
