--- a/docs/docs-ref-autogen/excel_online/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.range.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.Range:class'
     summary: |-
-      Range 表示一个或多个连续单元格的集合，例如单元格、行、列、单元格块等。若要了解有关如何在整个 API 中使用范围的详细信息，请参阅[使用 Excel JAVASCRIPT Api 处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges)并使用[excel javascript api （高级）处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges-advanced)<!-- -->.
+      Range 表示一个或多个连续单元格的集合，例如单元格、行、列、单元格块等。若要了解有关如何在整个 API 中使用范围的详细信息，请参阅[使用 Excel JAVASCRIPT Api 处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges)并使用[excel javascript api (高级) ](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges-advanced)<!-- -->.
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Range
@@ -124,7 +124,7 @@ items:
       - 'excel!Excel.Range#worksheet:member'
   - uid: 'excel!Excel.Range#address:member'
     summary: |-
-      指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
+      指定 A1 样式中的区域引用。 Address 值将包含工作表引用 (例如，"Sheet1！A1： B4 ") 。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -188,7 +188,7 @@ items:
           ```
       parameters:
         - id: destinationRange
-          description: 要自动填充的目标区域。 如果目标区域为 null，则根据周围单元格（双击 UI 的区域填充句柄时的行为）填充数据。
+          description: 要自动填充的目标区域。 如果目标区域为 null，则数据将根据周围的单元格进行填充 (这是双击 UI 的区域填充柄) 时的行为。
           type:
             - 'excel!Excel.Range#autoFill~0:complex'
         - id: autoFillType
@@ -215,7 +215,7 @@ items:
         description: ''
       parameters:
         - id: destinationRange
-          description: 要自动填充的目标区域。 如果目标区域为 null，则根据周围单元格（双击 UI 的区域填充句柄时的行为）填充数据。
+          description: 要自动填充的目标区域。 如果目标区域为 null，则数据将根据周围的单元格进行填充 (这是双击 UI 的区域填充柄) 时的行为。
           type:
             - 'excel!Excel.Range#autoFill~1:complex'
         - id: autoFillTypeString
@@ -1034,7 +1034,7 @@ items:
             - number
   - uid: 'excel!Excel.Range#getEntireColumn:member(1)'
     summary: |-
-      获取一个对象，该对象代表区域的整列（例如，如果当前区域表示单元格 "B4： E11"，则它 `getEntireColumn` 是表示列 "B:E" 的区域）。
+      获取一个对象，该对象表示区域中 (的整列。例如，如果当前区域表示单元格 "B4： E11"， `getEntireColumn` 则它是表示列 "B:E" 的区域 ) 。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getEntireColumn()
@@ -1073,7 +1073,7 @@ items:
           ```
   - uid: 'excel!Excel.Range#getEntireRow:member(1)'
     summary: |-
-      获取一个对象，该对象表示区域的整行（例如，如果当前区域表示单元格 "B4： E11"，则它 `GetEntireRow` 是表示行 "4:11" 的区域）。
+      获取表示区域中整行的对象 (例如，如果当前区域表示单元格 "B4： E11"， `GetEntireRow` 则它是表示行 "4:11" ) 的区域。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getEntireRow()
@@ -1115,7 +1115,7 @@ items:
     summary: |-
       将区域呈现为 base64 编码的 png 图像。
 
-      **重要说明**： Excel for Mac 中目前不支持此 API。 访问 \[ OfficeDev/office-Js 问题 \# 235 \] （ https://github.com/OfficeDev/office-js/issues/235) 适用于当前状态。
+      **重要说明**： Excel for Mac 中目前不支持此 API。 \[有关当前状态，请访问 OfficeDev/office-Js 问题 \# 235 \] (https://github.com/OfficeDev/office-js/issues/235) 。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getImage()
@@ -1422,7 +1422,36 @@ items:
       return:
         type:
           - 'excel!Excel.PivotTableScopedCollection:class'
-        description: ''
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/pivottable-get-pivottables.yaml
+          await Excel.run(async (context) => {
+            const activeRange = context.workbook.getSelectedRange();
+
+            // Get all the PivotTables that intersect with this range.
+            const partiallyContainedPivotTables = activeRange.getPivotTables();
+            // Get all the PivotTables that are completely contained within this range.
+            const fullyContainedPivotTables = activeRange.getPivotTables(true);
+
+            partiallyContainedPivotTables.load("name");
+            fullyContainedPivotTables.load("name");
+            await context.sync();
+
+            // Display the names in the console.
+            console.log("PivotTables in the current range:")
+            partiallyContainedPivotTables.items.forEach((pivotTable) => {
+              console.log(`\t${pivotTable.name}`);
+            });
+            console.log("PivotTables completely contained in the current range:")
+            fullyContainedPivotTables.items.forEach((pivotTable) => {
+              console.log(`\t${pivotTable.name}`);
+            });
+          });
+          ```
       parameters:
         - id: fullyContained
           description: 如果为 true，则仅返回完全包含在区域边界内的数据透视表。 默认值为 false。
@@ -1908,7 +1937,7 @@ items:
           ```
       parameters:
         - id: groupOption
-          description: 指定如何按行或列对区域进行分组。 `InvalidArgument`当组选项与范围 `isEntireRow` 或 `isEntireColumn` 属性不同时（即，为 `range.isEntireRow` True 且 `groupOption` 为 "ByColumns"，或者为 `range.isEntireColumn` `groupOption` "ByRows"）时，将引发错误。
+          description: 指定如何按行或列对区域进行分组。 `InvalidArgument`当组选项与范围或属性不同时，将引发错误 `isEntireRow` `isEntireColumn` (也就是说， `range.isEntireRow` 为 True 且 `groupOption` 为 "ByColumns"，或者为 `range.isEntireColumn` `groupOption` "ByRows" ) 。
           type:
             - 'excel!Excel.GroupOption:enum'
   - uid: 'excel!Excel.Range#group:member(2)'
@@ -1929,7 +1958,7 @@ items:
         description: ''
       parameters:
         - id: groupOptionString
-          description: 指定如何按行或列对区域进行分组。 `InvalidArgument`当组选项与范围 `isEntireRow` 或 `isEntireColumn` 属性不同时（即，为 `range.isEntireRow` True 且 `groupOption` 为 "ByColumns"，或者为 `range.isEntireColumn` `groupOption` "ByRows"）时，将引发错误。
+          description: 指定如何按行或列对区域进行分组。 `InvalidArgument`当组选项与范围或属性不同时，将引发错误 `isEntireRow` `isEntireColumn` (也就是说， `range.isEntireRow` 为 True 且 `groupOption` 为 "ByColumns"，或者为 `range.isEntireColumn` `groupOption` "ByRows" ) 。
           type:
             - '"ByRows" | "ByColumns"'
   - uid: 'excel!Excel.Range#height:member'
@@ -2938,7 +2967,7 @@ items:
         type:
           - 'string[][]'
   - uid: 'excel!Excel.Range#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Excel Range 对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.RangeData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始的 Excel Range 对象是一个 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为`Excel.Interfaces.RangeData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
