--- a/docs/docs-ref-autogen/office/office/office.ui.yml
+++ b/docs/docs-ref-autogen/office/office/office.ui.yml
@@ -30,20 +30,20 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'addHandlerAsync(eventType: Office.EventType, handler: (result: any) => void, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
+      content: 'addHandlerAsync(eventType: Office.EventType, handler: (result: DialogParentMessageReceivedEventArgs) => void, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: eventType
-          description: 指定要添加事件的类型。 这必须`Office.EventType.DialogParentMessageReceived`<!-- -->.
+          description: 指定要添加事件的类型。 这必须 `Office.EventType.DialogParentMessageReceived`<!-- -->.
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DialogParentMessageReceivedEventArgs](xref:office!Office.DialogParentMessageReceivedEventArgs:interface)<!-- -->.'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为 [DialogParentMessageReceivedEventArgs](xref:office!Office.DialogParentMessageReceivedEventArgs:interface)<!-- -->.'
           type:
-            - '(result: any) => void'
+            - 'office!Office.UI#addHandlerAsync~0:complex'
         - id: options
           description: 可选。 提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。
           type:
@@ -51,11 +51,11 @@ items:
         - id: callback
           description: '可选。 在处理程序注册返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->.'
           type:
-            - 'office!Office.UI#addHandlerAsync~0:complex'
+            - 'office!Office.UI#addHandlerAsync~1:complex'
   - uid: 'office!Office.UI#closeContainer:member(1)'
     summary: 关闭正在执行 JavaScript 的 UI 容器。
     remarks: |-
-      **主机**： Excel、Word、PowerPoint、Outlook （最低要求集：邮箱1.5）
+      **主机**： Excel、Word、PowerPoint、Outlook (最低要求集：邮箱 1.5) 
 
       **要求集**： [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)
 
@@ -88,9 +88,9 @@ items:
 
       - [Mailbox 1.4](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)
 
-      此方法适用于 Word、Excel 或 PowerPoint 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅[指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
+      此方法适用于 Word、Excel 或 PowerPoint 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅 [指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
 
-      初始页必须与父页位于同一域中（startAddress 参数）。 初始网页加载后，你可以转到其他域。
+      初始页必须与父页位于同一域中 (startAddress 参数) 。 初始网页加载后，你可以转到其他域。
 
       任何页调用 `Office.context.ui.messageParent` 也必须与父页位于同一域中。
 
@@ -98,7 +98,7 @@ items:
 
       下列设计注意事项适用于对话框：
 
-      - Office 外接程序任务窗格在任何时候都只能有一个打开的对话框。 可以从加载项命令同时打开多个对话框（自定义功能区按钮或菜单项）。
+      - Office 外接程序任务窗格在任何时候都只能有一个打开的对话框。 可以从加载项命令同时打开多个对话框 (自定义功能区按钮或菜单项) 。
 
       - 用户可以移动每个对话框和调整其大小。
 
@@ -140,7 +140,7 @@ items:
           type:
             - string
         - id: options
-          description: '可选。 接受[DialogOptions](xref:office!Office.DialogOptions:interface)对象以定义对话框显示。'
+          description: '可选。 接受 [DialogOptions](xref:office!Office.DialogOptions:interface) 对象以定义对话框显示。'
           type:
             - 'office!Office.DialogOptions:interface'
         - id: callback
@@ -158,9 +158,9 @@ items:
 
       - [Mailbox 1.4](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)
 
-      此方法适用于 Word、Excel 或 PowerPoint 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅[指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
+      此方法适用于 Word、Excel 或 PowerPoint 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅 [指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
 
-      初始页必须与父页位于同一域中（startAddress 参数）。 初始网页加载后，你可以转到其他域。
+      初始页必须与父页位于同一域中 (startAddress 参数) 。 初始网页加载后，你可以转到其他域。
 
       任何页调用 `Office.context.ui.messageParent` 也必须与父页位于同一域中。
 
@@ -168,7 +168,7 @@ items:
 
       下列设计注意事项适用于对话框：
 
-      - Office 外接程序任务窗格在任何时候都只能有一个打开的对话框。 可以从加载项命令同时打开多个对话框（自定义功能区按钮或菜单项）。
+      - Office 外接程序任务窗格在任何时候都只能有一个打开的对话框。 可以从加载项命令同时打开多个对话框 (自定义功能区按钮或菜单项) 。
 
       - 用户可以移动每个对话框和调整其大小。
 
@@ -235,9 +235,20 @@ items:
 references:
   - uid: 'office!Office.EventType:enum'
     name: Office.EventType
+  - uid: 'office!Office.UI#addHandlerAsync~0:complex'
+    name: '(result: DialogParentMessageReceivedEventArgs) => void'
+    fullName: '(result: Office.DialogParentMessageReceivedEventArgs) => void'
+    spec.typeScript:
+      - name: '(result: '
+        fullName: '(result: '
+      - uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
+        name: DialogParentMessageReceivedEventArgs
+        fullName: Office.DialogParentMessageReceivedEventArgs
+      - name: ) => void
+        fullName: ) => void
   - uid: 'office!Office.AsyncContextOptions:interface'
     name: Office.AsyncContextOptions
-  - uid: 'office!Office.UI#addHandlerAsync~0:complex'
+  - uid: 'office!Office.UI#addHandlerAsync~1:complex'
     name: '(result: AsyncResult<void>) => void'
     fullName: '(result: Office.AsyncResult<void>) => void'
     spec.typeScript:
