--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcustompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcustompropertycollection.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       包含工作表级别的自定义属性的集合。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.WorksheetCustomPropertyCollection
     fullName: Excel.WorksheetCustomPropertyCollection
@@ -29,7 +29,7 @@ items:
     summary: |-
       添加映射到所提供的键的新自定义属性。 这将使用该密钥覆盖现有的自定义属性。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: 'add(key, value)'
     fullName: 'add(key, value)'
@@ -41,10 +41,30 @@ items:
       return:
         type:
           - 'excel!Excel.WorksheetCustomProperty:class'
-        description: ''
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/custom-properties.yaml
+          await Excel.run(async (context) => {
+            // Get the key/value pair from the task pane.
+            const userKey = $("#key").text();
+            const userValue = $("#value").text();
+
+            // Add the custom property.
+            const customWorksheetProperties = context.workbook.worksheets.getActiveWorksheet().customProperties;
+            customWorksheetProperties.add(userKey, userValue);
+
+            await context.sync();
+
+            console.log(`Successfully set custom worksheet property ${userKey}:${userValue}.`);
+          });
+          ```
       parameters:
         - id: key
-          description: 标识自定义属性对象的键。 它不区分大小写。密钥限制为255个字符（更大的值将导致引发 "InvalidArgument" 错误。）
+          description: '标识自定义属性对象的键。 它不区分大小写。密钥限制为255个字符 (较大的值将导致引发 "InvalidArgument" 错误。 ) '
           type:
             - string
         - id: value
@@ -68,7 +88,7 @@ items:
     summary: |-
       获取此工作表上的自定义属性的数目。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: getCount()
     fullName: getCount()
@@ -85,7 +105,7 @@ items:
     summary: |-
       按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则引发此异常。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: getItem(key)
     fullName: getItem(key)
@@ -107,7 +127,7 @@ items:
     summary: |-
       按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则返回 null 对象。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: getItemOrNullObject(key)
     fullName: getItemOrNullObject(key)
@@ -192,11 +212,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.WorksheetCustomPropertyCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Excel.WorksheetCustomPropertyCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.WorksheetCustomPropertyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.WorksheetCustomPropertyCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.WorksheetCustomPropertyCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
     isPreview: true
     name: toJSON()
     fullName: toJSON()
