--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.custompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.custompropertycollection.yml
@@ -40,14 +40,34 @@ items:
       return:
         type:
           - 'excel!Excel.CustomProperty:class'
-        description: ''
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/custom-properties.yaml
+          await Excel.run(async (context) => {
+            // Get the key/value pair from the task pane.
+            const userKey = $("#key").text();
+            const userValue = $("#value").text();
+
+            // Add the custom property.
+            const customDocProperties = context.workbook.properties.custom;
+            customDocProperties.add(userKey, userValue);
+
+            await context.sync();
+
+            console.log(`Successfully set custom document property ${userKey}:${userValue}.`);
+          });
+          ```
       parameters:
         - id: key
-          description: 必需。 自定义属性的键，它不区分大小写。 密钥限制为在 web 上的 Excel 之外的255个字符（较大的密钥会自动修整到其他平台上的255个字符）。
+          description: 必需项。 自定义属性的键，它不区分大小写。 密钥限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符进行修整 (较长的字符) 。
           type:
             - string
         - id: value
-          description: 必需。 自定义属性的值。 该值限制为在 web 上的 Excel 之外的255个字符（更大的值会自动修整为其他平台上的255个字符）。
+          description: 必需项。 自定义属性的值。 该值限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符 (较大值进行修整) 。
           type:
             - any
   - uid: 'excel!Excel.CustomPropertyCollection#context:member'
@@ -133,7 +153,7 @@ items:
         description: ''
       parameters:
         - id: key
-          description: 必需。 标识自定义属性对象的键。
+          description: 必需项。 标识自定义属性对象的键。
           type:
             - string
   - uid: 'excel!Excel.CustomPropertyCollection#items:member'
@@ -199,11 +219,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.CustomPropertyCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `Excel.CustomPropertyCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.CustomPropertyCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.CustomPropertyCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.CustomPropertyCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
     name: toJSON()
     fullName: toJSON()
     langs:
