--- a/docs/docs-ref-autogen/office/office-runtime/officeruntime.auth.yml
+++ b/docs/docs-ref-autogen/office/office-runtime/officeruntime.auth.yml
@@ -2,7 +2,6 @@
 items:
   - uid: 'office-runtime!OfficeRuntime.Auth:interface'
     summary: 包含与授权相关的 Api 的接口。
-    isPreview: true
     name: OfficeRuntime.Auth
     fullName: OfficeRuntime.Auth
     langs:
@@ -13,11 +12,10 @@ items:
       - 'office-runtime!OfficeRuntime.Auth#getAccessToken:member(1)'
   - uid: 'office-runtime!OfficeRuntime.Auth#getAccessToken:member(1)'
     summary: |-
-      调用 Azure Active Directory V 2.0 终结点以获取令牌来访问加载项的 Web 应用程序。 启用外接程序以标识用户。 通过使用["代表" OAuth 流](https://docs.microsoft.com/azure/active-directory/develop/active-directory-v2-protocols-oauth-on-behalf-of)，服务器端代码可以使用此令牌访问加载项的 web 应用程序的 Microsoft Graph<!-- -->. 此 API 需要将加载项桥接到 Azure 应用程序的单一登录配置。 Office 用户使用组织帐户和 Microsoft 帐户登录。 Microsoft Azure 返回适用于两种用户帐户类型的令牌，以访问 Microsoft Graph 中的资源。
+      调用 Azure Active Directory V 2.0 终结点以获取令牌来访问加载项的 Web 应用程序。 启用外接程序以标识用户。 服务器端代码可以使用此令牌，通过使用["代表" OAuth 流](https://docs.microsoft.com/azure/active-directory/develop/active-directory-v2-protocols-oauth-on-behalf-of)来访问加载项 web 应用程序的 Microsoft Graph<!-- -->. 此 API 需要将加载项桥接到 Azure 应用程序的单一登录配置。 Office 用户使用组织帐户和 Microsoft 帐户登录。 Microsoft Azure 返回适用于两种用户帐户类型的令牌，以访问 Microsoft Graph 中的资源。
 
-      重要说明：在 Outlook 中，如果外接程序加载到 Outlook.com 或 Gmail 邮箱中，则此 API 不受支持。
-    remarks: '**主机**： Excel、PowerPoint、Word'
-    isPreview: true
+      **重要说明**：在 Outlook 中，如果外接程序加载到 Outlook.com 或 Gmail 邮箱中，则此 API 不受支持。
+    remarks: '**主机**： Excel、Outlook、PowerPoint、Word'
     name: getAccessToken(options)
     fullName: getAccessToken(options)
     langs:
@@ -28,10 +26,10 @@ items:
       return:
         type:
           - 'office-runtime!OfficeRuntime.Auth#getAccessToken~0:complex'
-        description: ''
+        description: 对访问令牌的承诺。
       parameters:
         - id: options
-          description: 可选。 接受 AuthOptions 对象以定义登录行为。 返回：对访问令牌的承诺。
+          description: 可选。 接受 `AuthOptions` 对象以定义登录行为。
           type:
             - 'office-runtime!OfficeRuntime.AuthOptions:interface'
 references:
