--- a/docs/docs-ref-autogen/office/office-runtime/officeruntime.authoptions.yml
+++ b/docs/docs-ref-autogen/office/office-runtime/officeruntime.authoptions.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
-    summary: 提供在 Office 从 AAD v 获取对加载项的访问令牌时的用户体验的选项。 2.0 使用 Tokenhelper.getaccesstoken 以便方法。
-    isPreview: true
+    summary: 提供在 Office 从 AAD v 获取对加载项的访问令牌时的用户体验的选项。 2.0 使用 `getAccessToken` 方法。
     name: OfficeRuntime.AuthOptions
     fullName: OfficeRuntime.AuthOptions
     langs:
@@ -15,10 +14,10 @@ items:
       - 'office-runtime!OfficeRuntime.AuthOptions#asyncContext:member'
       - 'office-runtime!OfficeRuntime.AuthOptions#authChallenge:member'
       - 'office-runtime!OfficeRuntime.AuthOptions#forceAddAccount:member'
+      - 'office-runtime!OfficeRuntime.AuthOptions#forceConsent:member'
       - 'office-runtime!OfficeRuntime.AuthOptions#forMSGraphAccess:member'
   - uid: 'office-runtime!OfficeRuntime.AuthOptions#allowConsentPrompt:member'
-    summary: 允许 Office 获取访问令牌 silectly 或通过互动许可（如果需要）。 如果设置为 false，Office 将以静默方式尝试获取访问令牌。 如果无法执行此操作，则 Office 将返回描述性错误。 如果设置为 true，则 Office 将在无法以无提示方式获取访问令牌后显示交互式同意 UI。 提示将只允许同意 AAD 配置文件作用域，而不是任何 Microsoft Graph 作用域。
-    isPreview: true
+    summary: 允许 Office 在无提示的情况下或通过交互式许可获取访问令牌（如果需要的话）。 默认值为 `false`<!-- -->. 如果设置为 `false`<!-- -->，Office 将以静默方式尝试获取访问令牌。 如果无法执行此操作，则 Office 将返回描述性错误。 如果设置为 `true`<!-- -->，则 Office 将在无法以无提示方式获取访问令牌后显示交互式同意 UI。 提示将只允许同意 AAD 配置文件作用域，而不是任何 Microsoft Graph 作用域。
     name: allowConsentPrompt
     fullName: allowConsentPrompt
     langs:
@@ -30,8 +29,7 @@ items:
         type:
           - boolean
   - uid: 'office-runtime!OfficeRuntime.AuthOptions#allowSignInPrompt:member'
-    summary: 允许 Office 获取一个无提示的访问令牌（即提供同意）或显示交互 UI 以登录用户。 如果设置为 false，office 将以静默方式尝试获取访问令牌。 如果无法执行此操作，则 Office 将返回描述性错误。 如果设置为 true，则 Office 将在无法以无提示方式获取访问令牌后显示交互式登录 UI。
-    isPreview: true
+    summary: 允许 Office 获取一个无提示的访问令牌（即提供同意）或显示交互 UI 以登录用户。 默认值为 `false`<!-- -->. 如果设置为 `false`<!-- -->，Office 将以静默方式尝试获取访问令牌。 如果无法执行此操作，则 Office 将返回描述性错误。 如果设置为 `true`<!-- -->，Office 将在无法以无提示方式获取访问令牌后显示交互式登录 UI。
     name: allowSignInPrompt
     fullName: allowSignInPrompt
     langs:
@@ -43,8 +41,7 @@ items:
         type:
           - boolean
   - uid: 'office-runtime!OfficeRuntime.AuthOptions#asyncContext:member'
-    summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
-    isPreview: true
+    summary: 在 `asyncContext` 传递给回调的对象的属性中，返回的任何类型的用户定义的项目未更改 `AsyncResult` 。
     name: asyncContext
     fullName: asyncContext
     langs:
@@ -56,8 +53,7 @@ items:
         type:
           - any
   - uid: 'office-runtime!OfficeRuntime.AuthOptions#authChallenge:member'
-    summary: 使 Office 在 Microsoft Graph 面向的租赁需要多重身份验证时提示用户提供其他因素。 字符串值标识所需的其他因素的类型。 在大多数情况下，在开发时，您不知道用户的租户是否需要其他因素或该字符串应是什么。 因此，在 Microsoft Graph 发送了一个错误，请求附加的因素并包含应与 authChallenge 选项一起使用的字符串时，将在 Tokenhelper.getaccesstoken 以便的 "second try" 调用中使用此选项。
-    isPreview: true
+    summary: 使 Office 在 Microsoft Graph 面向的租赁需要多重身份验证时提示用户提供其他因素。 字符串值标识所需的其他因素的类型。 在大多数情况下，在开发时，您不知道用户的租户是否需要其他因素或该字符串应是什么。 因此，在 Microsoft Graph 之后的 "第二次尝试" 调用中，将会 `getAccessToken` 发送错误，请求添加其他因素，并包含应与该选项一起使用的字符串 `authChallenge` 。
     name: authChallenge
     fullName: authChallenge
     langs:
@@ -69,8 +65,9 @@ items:
         type:
           - string
   - uid: 'office-runtime!OfficeRuntime.AuthOptions#forceAddAccount:member'
-    summary: 已弃用提示用户添加 Office 帐户（或切换到该帐户，如果已添加）。
-    isPreview: true
+    summary: 提示用户将其 Office 帐户 (或切换到该帐户（如果已将其添加) 中）。 默认值为 `false`<!-- -->.
+    deprecated:
+      content: Use `allowSignInPrompt` instead.
     name: forceAddAccount
     fullName: forceAddAccount
     langs:
@@ -81,9 +78,22 @@ items:
       return:
         type:
           - boolean
+  - uid: 'office-runtime!OfficeRuntime.AuthOptions#forceConsent:member'
+    summary: 导致 Office 显示加载项同意体验。 如果加载项的 Azure 权限已更改或用户的同意已被撤销，则很有用。 默认值为 `false`<!-- -->.
+    deprecated:
+      content: Use `allowConsentPrompt` instead.
+    name: forceConsent
+    fullName: forceConsent
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'forceConsent?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'office-runtime!OfficeRuntime.AuthOptions#forMSGraphAccess:member'
-    summary: 当外接程序要访问 MS Graph 且用户/管理员未向 MS Graph 范围授予许可时，使 Office 返回描述性错误。 Office 仅在由租户管理员部署加载项时，才支持对图形范围的许可。在开发过程中，此信息将不可用。 将此选项设置为 true 将允许 Office 事先通知外接程序，如果 MS graph 访问失败，将返回一个描述性错误。
-    isPreview: true
+    summary: 当外接程序要访问 Microsoft Graph 且用户/管理员未向其授予对 Graph 范围的同意时，使 Office 返回描述性错误。 默认值为 `false`<!-- -->. Office 仅在由租户管理员部署加载项时，才支持对图形范围的许可。在开发过程中，此信息将不可用。 将此选项设置为 `true` 将导致 Office 事先通知外接程序 (如果 Graph access 将失败，) 返回描述性错误。
     name: forMSGraphAccess
     fullName: forMSGraphAccess
     langs:
