--- a/docs/docs-ref-autogen/outlook/outlook/office.sessiondata.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.sessiondata.yml
@@ -18,11 +18,44 @@ items:
     package: outlook!
     children:
       - 'outlook!Office.SessionData#clearAsync:member(1)'
+      - 'outlook!Office.SessionData#clearAsync:member(2)'
       - 'outlook!Office.SessionData#getAllAsync:member(1)'
       - 'outlook!Office.SessionData#getAsync:member(1)'
       - 'outlook!Office.SessionData#removeAsync:member(1)'
+      - 'outlook!Office.SessionData#removeAsync:member(2)'
       - 'outlook!Office.SessionData#setAsync:member(1)'
+      - 'outlook!Office.SessionData#setAsync:member(2)'
   - uid: 'outlook!Office.SessionData#clearAsync:member(1)'
+    summary: |-
+      清除所有会话数据键/值对。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写
+    isPreview: true
+    name: 'clearAsync(options, callback)'
+    fullName: 'clearAsync(options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'clearAsync(options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: options
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。 `asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.SessionData#clearAsync~0:complex'
+  - uid: 'outlook!Office.SessionData#clearAsync:member(2)'
     summary: |-
       清除所有会话数据键/值对。
 
@@ -45,26 +78,22 @@ items:
       });
       ```
     isPreview: true
-    name: 'clearAsync(options, callback)'
-    fullName: 'clearAsync(options, callback)'
+    name: clearAsync(callback)
+    fullName: clearAsync(callback)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'clearAsync(options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'clearAsync(callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
         description: ''
       parameters:
-        - id: options
-          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
-          type:
-            - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。 `asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
           type:
-            - 'outlook!Office.SessionData#clearAsync~0:complex'
+            - 'outlook!Office.SessionData#clearAsync~1:complex'
   - uid: 'outlook!Office.SessionData#getAllAsync:member(1)'
     summary: |-
       获取所有会话数据键/值对。
@@ -101,7 +130,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          description: 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。 `asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
           type:
             - 'outlook!Office.SessionData#getAllAsync~0:complex'
   - uid: 'outlook!Office.SessionData#getAsync:member(1)'
@@ -146,10 +175,44 @@ items:
           type:
             - string
         - id: callback
-          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
             - 'outlook!Office.SessionData#getAsync~0:complex'
   - uid: 'outlook!Office.SessionData#removeAsync:member(1)'
+    summary: |-
+      删除会话数据键/值对。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadWriteItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写
+    isPreview: true
+    name: 'removeAsync(name, options, callback)'
+    fullName: 'removeAsync(name, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'removeAsync(name: string, options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: name
+          description: 会话数据密钥。
+          type:
+            - string
+        - id: options
+          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。 `asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.SessionData#removeAsync~0:complex'
+  - uid: 'outlook!Office.SessionData#removeAsync:member(2)'
     summary: |-
       删除会话数据键/值对。
 
@@ -175,13 +238,13 @@ items:
       );
       ```
     isPreview: true
-    name: 'removeAsync(name, options, callback)'
-    fullName: 'removeAsync(name, options, callback)'
+    name: 'removeAsync(name, callback)'
+    fullName: 'removeAsync(name, callback)'
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'removeAsync(name:string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'removeAsync(name: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
@@ -191,15 +254,49 @@ items:
           description: 会话数据密钥。
           type:
             - string
+        - id: callback
+          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。 `asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          type:
+            - 'outlook!Office.SessionData#removeAsync~1:complex'
+  - uid: 'outlook!Office.SessionData#setAsync:member(1)'
+    summary: |-
+      设置会话数据键/值对。
+
+      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: |-
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写
+    isPreview: true
+    name: 'setAsync(name, value, options, callback)'
+    fullName: 'setAsync(name, value, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'setAsync(name: string, value: string, options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: name
+          description: 会话数据密钥。
+          type:
+            - string
+        - id: value
+          description: 字符串形式的会话数据值。
+          type:
+            - string
         - id: options
           description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数调用在参数中传递的函数。`asyncResult`<!-- -->，它是一个 `Office.AsyncResult` 对象。
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
-            - 'outlook!Office.SessionData#removeAsync~0:complex'
-  - uid: 'outlook!Office.SessionData#setAsync:member(1)'
+            - 'outlook!Office.SessionData#setAsync~0:complex'
+  - uid: 'outlook!Office.SessionData#setAsync:member(2)'
     summary: |-
       设置会话数据键/值对。
 
@@ -225,13 +322,13 @@ items:
       });
       ```
     isPreview: true
-    name: 'setAsync(name, value, options, callback)'
-    fullName: 'setAsync(name, value, options, callback)'
+    name: 'setAsync(name, value, callback)'
+    fullName: 'setAsync(name, value, callback)'
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'setAsync(name:string, value:string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'setAsync(name: string, value: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
@@ -245,18 +342,25 @@ items:
           description: 字符串形式的会话数据值。
           type:
             - string
-        - id: options
-          description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供希望访问的任何对象。
-          type:
-            - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数`Office.AsyncResult`<!-- -->.
+          description: 可选。 方法完成后， `callback` 使用单个参数类型调用在参数中传递的函数 `Office.AsyncResult`<!-- -->.
           type:
-            - 'outlook!Office.SessionData#setAsync~0:complex'
+            - 'outlook!Office.SessionData#setAsync~1:complex'
 references:
   - uid: 'office!Office.AsyncContextOptions:interface'
     name: Office.AsyncContextOptions
   - uid: 'outlook!Office.SessionData#clearAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
+  - uid: 'outlook!Office.SessionData#clearAsync~1:complex'
     name: '(asyncResult: Office.AsyncResult<void>) => void'
     fullName: '(asyncResult: Office.AsyncResult<void>) => void'
     spec.typeScript:
@@ -300,7 +404,29 @@ references:
         fullName: Office.AsyncResult
       - name: <void>) => void
         fullName: <void>) => void
+  - uid: 'outlook!Office.SessionData#removeAsync~1:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'outlook!Office.SessionData#setAsync~0:complex'
+    name: '(asyncResult: Office.AsyncResult<void>) => void'
+    fullName: '(asyncResult: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(asyncResult: '
+        fullName: '(asyncResult: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: Office.AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
+  - uid: 'outlook!Office.SessionData#setAsync~1:complex'
     name: '(asyncResult: Office.AsyncResult<void>) => void'
     fullName: '(asyncResult: Office.AsyncResult<void>) => void'
     spec.typeScript:
